--- a/src/encoded/static/scss/encoded/modules/_pedigree-visualization.scss
+++ b/src/encoded/static/scss/encoded/modules/_pedigree-visualization.scss
@@ -209,134 +209,11 @@ $pedigree-disease-colors :
                     }
                 }
             }
-    
-            > .shapes-layer {
+
+            > svg.pedigree-viz-shapes-layer.shapes-layer {
                 position: absolute;
                 top: 0;
                 left: 0;
-    
-                > .individuals-bg-shape-layer {
-    
-                    > g.pedigree-individual-shape {
-                        // Shapes will inherit group styles unless overriding
-                        stroke-width: 3px;
-                        stroke: $pedigree-viz-node-stroke-color;
-                        @include transition(transform .2s, -webkit-transform .2s);
-    
-                        .bg-shape-copy {
-                            stroke-width: 0px;
-                            fill: $pedigree-viz-bg-color;
-                        }
-    
-                        .fg-shape {
-                            stroke-width: 3px;
-                            fill: transparent;
-                            @include transition(stroke-width .2s);
-                        }
-    
-                        text {
-                            stroke-width: 0px;
-                            fill: $pedigree-viz-node-stroke-color;
-                            &.proband-identifier {
-                                font-weight: 700;
-                            }
-                        }
-    
-                        circle.circle-disease-dot,
-                        rect.rect-disease-partition {
-                            @include pedigree-color-cycle-fill;
-                            stroke-width: 1;
-                            
-                        }
-    
-                        &.is-hovered-over,
-                        &.is-selected {
-                            .fg-shape {
-                                stroke-width: 4px;
-                                stroke: darken($pedigree-viz-node-stroke-color, 20%);
-                            }
-                        }
-    
-                        &.is-affected {
-                            fill: transparent; // Colors of disease-arcs behind it will show through.
-                            g.disease-path-arcs {
-                                path.disease-arc {
-                                    @include pedigree-color-cycle-fill;
-                                    stroke-width: 1;
-                                    &:only-of-type {
-                                        stroke-width: 0;
-                                    }
-                                }
-                            }
-
-                        }
-    
-                        g.text-box {
-                            rect.bg-rect {
-                                stroke: none;
-                                fill: transparentize($pedigree-viz-bg-color, 0.25);
-                            }
-                            text {
-                                font-size: 0.9rem;
-                                &[data-describing="title"]{
-
-                                }
-                                &.showing-order-based-name[data-describing="title"]{
-                                    font-family: $font-family-monospace;
-                                    font-family: $font-family-serif;
-                                    /* letter-spacing: -0.125em; */ // <- Enable for monospace
-                                    /* font-size: 0.9125em; */
-                                    /* font-size: 1em; */
-                                    font-size: 1.0725em;
-                                    font-weight: 700;
-                                    @extend .no-user-select;
-                                }
-                            }
-                        }
-                    }
-
-                }
-    
-                > .individuals-edge-shape-layer {
-                    path.edge-path {
-                        stroke: $pedigree-viz-node-stroke-color;
-                        fill: none;
-                        stroke-width: 2;
-                        
-                        &.is-adjustable {
-                            stroke: #7d0000;
-                            //stroke: orange;
-                        }
-
-                        &.not-adjustable {
-                            stroke-linecap: square;
-                        }
-                    }
-                }
-
-                > .relationships-layer {
-                    .pedigree-relationship {
-                        cursor: pointer;
-                        @include transition(transform .2s, -webkit-transform .2s);
-                        > circle {
-                            stroke: #521f1f;
-                            stroke-width: 2px;
-                            fill: rgba(82, 31, 31, 0.7);
-                        }
-                    }
-                }
-    
-                > g.selected-node-identifier {
-                    @include transition(transform .3s);
-                    > g.identifier-corner {
-                        @include transition(transform .3s);
-                    }
-                    path {
-                        stroke: $pedigree-viz-node-stroke-color;
-                        stroke-width: 2px;
-                        fill: none;
-                    }
-                }
             }
     
         }
@@ -410,6 +287,132 @@ $pedigree-disease-colors :
         }
     }
 
+}
+
+svg.pedigree-viz-shapes-layer.shapes-layer {
+
+    > .individuals-bg-shape-layer {
+
+        > g.pedigree-individual-shape {
+            // Shapes will inherit group styles unless overriding
+            stroke-width: 3px;
+            stroke: $pedigree-viz-node-stroke-color;
+            @include transition(transform .2s, -webkit-transform .2s);
+
+            .bg-shape-copy {
+                stroke-width: 0px;
+                fill: $pedigree-viz-bg-color;
+            }
+
+            .fg-shape {
+                stroke-width: 3px;
+                fill: transparent;
+                @include transition(stroke-width .2s);
+            }
+
+            text {
+                stroke-width: 0px;
+                fill: $pedigree-viz-node-stroke-color;
+                &.proband-identifier {
+                    font-weight: 700;
+                }
+            }
+
+            circle.circle-disease-dot,
+            rect.rect-disease-partition {
+                @include pedigree-color-cycle-fill;
+                stroke-width: 1;
+                
+            }
+
+            &.is-hovered-over,
+            &.is-selected {
+                .fg-shape {
+                    stroke-width: 4px;
+                    stroke: darken($pedigree-viz-node-stroke-color, 20%);
+                }
+            }
+
+            &.is-affected {
+                fill: transparent; // Colors of disease-arcs behind it will show through.
+                g.disease-path-arcs {
+                    path.disease-arc {
+                        @include pedigree-color-cycle-fill;
+                        stroke-width: 1;
+                        &:only-of-type {
+                            stroke-width: 0;
+                        }
+                    }
+                }
+
+            }
+
+            g.text-box {
+                rect.bg-rect {
+                    stroke: none;
+                    fill: transparentize($pedigree-viz-bg-color, 0.25);
+                }
+                text {
+                    font-size: 0.9rem;
+                    &[data-describing="title"]{
+
+                    }
+                    &.showing-order-based-name[data-describing="title"]{
+                        font-family: $font-family-monospace;
+                        font-family: $font-family-serif;
+                        /* letter-spacing: -0.125em; */ // <- Enable for monospace
+                        /* font-size: 0.9125em; */
+                        /* font-size: 1em; */
+                        font-size: 1.0725em;
+                        font-weight: 700;
+                        @extend .no-user-select;
+                    }
+                }
+            }
+        }
+
+    }
+
+    > .individuals-edge-shape-layer {
+        path.edge-path {
+            stroke: $pedigree-viz-node-stroke-color;
+            fill: none;
+            stroke-width: 2;
+            
+            &.is-adjustable {
+                stroke: #7d0000;
+                //stroke: orange;
+            }
+
+            &.not-adjustable {
+                stroke-linecap: square;
+            }
+        }
+    }
+
+    > .relationships-layer {
+        .pedigree-relationship {
+            cursor: pointer;
+            @include transition(transform .2s, -webkit-transform .2s);
+            > circle {
+                stroke: #521f1f;
+                stroke-width: 2px;
+                fill: rgba(82, 31, 31, 0.7);
+            }
+        }
+    }
+
+    > g.selected-node-identifier {
+        @include transition(transform .3s);
+        > g.identifier-corner {
+            @include transition(transform .3s);
+        }
+        path {
+            stroke: $pedigree-viz-node-stroke-color;
+            stroke-width: 2px;
+            fill: none;
+        }
+    }
 }
 
 /** Default Detail Pane Styling **/
