--- a/src/encoded/static/scss/encoded/modules/_tables.scss
+++ b/src/encoded/static/scss/encoded/modules/_tables.scss
@@ -151,7 +151,8 @@ table.matrix {
 					overflow-x: hidden;
 					font-weight: 500;
 
-					.mono-text {
+					.mono-text,
+					.text-monospace {
 						text-shadow: 0 0 0;
 					}
 				}
