--- a/src/encoded/static/scss/encoded/modules/_pedigree-visualization.scss
+++ b/src/encoded/static/scss/encoded/modules/_pedigree-visualization.scss
@@ -94,6 +94,12 @@ $pedigree-disease-colors :
         min-height: inherit;
         height: inherit;
         position: relative;
+        opacity: 1;
+        &:not([data-is-mounted="true"]) {
+            opacity: 0;
+        }
+
+        transition: opacity .4s ease-out;
 
         // Center viz area, also has align-items: center for .pedigree-viz-container.has-extra-height
         display: flex;
@@ -222,7 +228,7 @@ $pedigree-disease-colors :
     
         }
 
-        &[data-is-min-scale="true"]{
+        &[data-is-min-scale="true"][data-is-mounted="true"]{
             > .viz-area {
                 transition: transform .3s ease;
             }
