--- a/src/encoded/static/scss/encoded/modules/_item-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_item-pages.scss
@@ -1888,6 +1888,7 @@ $badge-item-min-height: 90px;
 									text-align: right;
 									vertical-align: middle;
 									font-weight: 600;
+									line-height: 1;
 								}
 							}
 						}
