re-add sample date, proband status, specimen notes/type; fix for gen marker class

--- a/src/encoded/static/scss/encoded/modules/_item-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_item-pages.scss
@@ -1884,16 +1884,14 @@ $badge-item-min-height: 90px;
 							*/
 							&[data-for-column="individual"]{
 								.gen-identifier {
-									margin-right: 10px;
-									padding-right: 10px;
-									border-right: 1px solid #777;
 									display: inline-block;
 									min-width: 45px;
-									text-align: right;
 									vertical-align: middle;
 									font-weight: 600;
-									line-height: 1;
 								}
+							}
+							i {
+								font-size: 12px;
 							}
 						}
 						&.is-even {
