--- a/src/encoded/static/scss/encoded/_bootstrap-theme-overrides.scss
+++ b/src/encoded/static/scss/encoded/_bootstrap-theme-overrides.scss
@@ -64,9 +64,20 @@
 
 
   
-  /* Moving caret to always right position */
-  .dropdown-toggle {
-      &:after {
-          vertical-align: 0.125em;
-      }
-  }
+/* Moving caret to always right position */
+.dropdown-toggle.btn {
+	position: relative;
+	padding-right: 24px;
+	padding-left: 10px;
+	&:after {
+		position: absolute;
+		top: 50%;
+		margin-top: -2px;
+        right: 10px;
+    }
+    &.btn-xs {
+        &:after {
+            margin-top: -1px;
+        }
+    }
+}
