--- a/src/encoded/static/scss/encoded/_bootstrap-theme-overrides.scss
+++ b/src/encoded/static/scss/encoded/_bootstrap-theme-overrides.scss
@@ -1,4 +1,6 @@
-/** Overrides for own styled btns **/
+/**************************************
+ ************ Button Styles ***********
+ **************************************/
 
 .btn {
     font-weight: 400;
@@ -38,32 +40,6 @@
 }
 
 
-/** Overrides for form controls **/
-
-.form-control {
-    // Overrides 0.75rem;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
-}
-
-/** Styling Bootstrap dropdowns to match portal more **/
-
-.dropdown-toggle + div.dropdown-menu {
-    //padding: 10px 0;
-    border-color: #bbb;
-    box-shadow: 0 0 5px -3px #000;
-    border-radius: 3px;
-
-    // For newer browsers, ensure doesn't go beyond window height
-    max-height: 75vh;
-    overflow-y: auto;
-}
-
-
-/************** MORE BUTTON STYLES ***********/
-
-
-  
 /* Moving caret to always right position */
 .dropdown-toggle.btn {
 	position: relative;
@@ -81,3 +57,56 @@
         }
     }
 }
+
+
+/**************************************
+ ************ Form Inputs *************
+ **************************************/
+
+.form-control {
+    // Overrides 0.75rem;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+}
+
+
+/**************************************
+ ************* Dropdowns **************
+ **************************************/
+
+/** Styling Bootstrap dropdowns to match portal more **/
+
+.dropdown-toggle + div.dropdown-menu {
+    //padding: 10px 0;
+    border-color: #bbb;
+    box-shadow: 0 0 5px -3px #000;
+    border-radius: 3px;
+
+    // For newer browsers, ensure doesn't go beyond window height
+    max-height: 75vh;
+    overflow-y: auto;
+}
+
+
+/**************************************
+ **************** Card ****************
+ **************************************/
+
+.card {
+
+    box-shadow: 0 1px 5px #0002;
+    border-color: #d6d6d6;
+
+    .card-header,
+    .card-footer {
+        /* Original value: calc(.25rem - 1px) calc(.25rem - 1px) 0 0; */
+        background-color: $card-bg;
+    }
+
+    .card-header:first-child {
+        /* Original value: calc(.25rem - 1px) calc(.25rem - 1px) 0 0; */
+        border-radius: 3px;
+    }
+
+}
+
