--- a/src/encoded/static/scss/encoded/modules/_pedigree-visualization.scss
+++ b/src/encoded/static/scss/encoded/modules/_pedigree-visualization.scss
@@ -1,4 +1,4 @@
-$pedigree-viz-bg-color: #f8f8f8 !default;
+$pedigree-viz-bg-color: #ffffff !default;
 $pedigree-viz-node-stroke-color: #444 !default;
 
 
