--- a/src/encoded/static/scss/encoded/modules/_static-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_static-pages.scss
@@ -493,6 +493,7 @@
 		/* 100% window height - 50px footer - 81px header+border - $tabbar-height dashboard header */
 		min-height: calc(100vh - 50px - 81px - #{$tabbar-height});
 
+		.case-items,
 		.cohort-items {
 
 			overflow-y: auto;
@@ -500,6 +501,7 @@
 			max-height: 360px;
 			height: 25vh;
 
+			.case-item-container,
 			.cohort-item-container {
 				padding: 8px 12px;
 				background-color: #f4f4f4;
