--- a/src/encoded/static/scss/encoded/modules/_item-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_item-pages.scss
@@ -1822,6 +1822,82 @@ $badge-item-min-height: 90px;
 		}
 	}
 
+	.processing-summary-tables-container {
+
+		h4.clickable {
+			box-shadow: 0 3px 5px 0px rgba(0,0,0,0.5);
+			background-color: white;
+			border-radius: 5px;
+			width: 100%;
+		}
+
+		.embedded-search-view-outer-container {
+			margin-left: 25px;
+			margin-right: 15px;
+			margin-bottom: 20px;
+			
+			.search-result-row {
+				&:last-of-type {
+					margin-bottom: 0px;
+				}
+			}
+			.embedded-search-container .fin.search-result-row {
+				display: none;
+			}
+
+			.edge-scroll-button
+		}
+
+
+		
+	}
+
+	.tab-router {
+		.dot-tab-nav-list {
+			list-style-type: none;
+			margin: 0;
+			padding: 0;
+			display: flex;
+			justify-content: space-evenly;
+
+			li.arrow-tab {
+				flex-grow: 1;
+
+				&:not(:last-of-type) {
+					padding-right: 10px;
+				}
+				
+				>a {
+					background-color: cornflowerblue;
+					color: #ffff;
+					height: 100%;
+					display: block;
+					text-align: center;
+					padding: 10px;
+					text-decoration: none;
+				}
+				&.disabled {
+					>a {
+						background-color: rgb(176, 196, 222);
+					}
+				}
+			}
+		}
+		.tab-router-contents {
+			background-color: rgb(230,235,240);
+			margin-top: -10px;
+
+			h1 {
+
+			}
+			h2 {
+				background-color: #2b6088;
+				width: 100%;
+			}
+		}
+	}
+	
+
 	div.summary-table-container {
 
 		padding-top: 10px;
