--- a/src/encoded/static/scss/encoded/modules/_item-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_item-pages.scss
@@ -1869,7 +1869,7 @@ $badge-item-min-height: 90px;
 					padding-right: 10px;
 				}
 				
-				>a {
+				>button {
 					background-color: cornflowerblue;
 					color: #ffff;
 					height: 100%;
@@ -1877,9 +1877,11 @@ $badge-item-min-height: 90px;
 					text-align: center;
 					padding: 10px;
 					text-decoration: none;
+					border: none;
+					width: 100%;
 				}
 				&.disabled {
-					>a {
+					>button {
 						background-color: rgb(176, 196, 222);
 					}
 				}
@@ -1893,6 +1895,15 @@ $badge-item-min-height: 90px;
 				font-size: 29px;
 				font-style: italic;
 				margin-bottom: 20px;
+
+				.curr-selection {
+					font-size: 14px;
+					font-style: normal;
+					font-weight: 400;
+					background-color: cornflowerblue;
+					padding: 4px;
+					color: #fff;
+				}
 			}
 			h2 {
 				font-size: 18px;
@@ -1923,6 +1934,11 @@ $badge-item-min-height: 90px;
 
 				.processing-summary-table {
 					width: 100%;
+				}
+
+				.stacked-block-table-headers {
+					background-color: #2b6088;
+					color: #ffffff;
 				}
 			}	
 		}
